core/codegen/tests/ui-fail-stable/from_form_field.stderr
error: tuple structs are not supported
 --> tests/ui-fail-stable/from_form_field.rs:4:1
  |
4 | struct Foo1;
  | ^^^^^^^^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
 --> tests/ui-fail-stable/from_form_field.rs:3:10
  |
3 | #[derive(FromFormField)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs are not supported
 --> tests/ui-fail-stable/from_form_field.rs:7:1
  |
7 | struct Foo2(usize);
  | ^^^^^^^^^^^^^^^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
 --> tests/ui-fail-stable/from_form_field.rs:6:10
  |
6 | #[derive(FromFormField)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named structs are not supported
  --> tests/ui-fail-stable/from_form_field.rs:10:1
   |
10 | / struct Foo3 {
11 | |     foo: usize,
12 | | }
   | |_^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
 --> tests/ui-fail-stable/from_form_field.rs:9:10
  |
9 | #[derive(FromFormField)]
  |          ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: variants cannot have fields
  --> tests/ui-fail-stable/from_form_field.rs:16:6
   |
16 |     A(usize),
   |      ^^^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:14:10
   |
14 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: enum must have at least one variant
  --> tests/ui-fail-stable/from_form_field.rs:20:1
   |
20 | enum Foo5 { }
   | ^^^^^^^^^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:19:10
   |
19 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: type generics are not supported
  --> tests/ui-fail-stable/from_form_field.rs:23:11
   |
23 | enum Foo6<T> {
   |           ^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:22:10
   |
22 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
  --> tests/ui-fail-stable/from_form_field.rs:29:21
   |
29 |     #[field(value = 123)]
   |                     ^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:27:10
   |
27 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected literal, found bare path "value"
  --> tests/ui-fail-stable/from_form_field.rs:35:13
   |
35 |     #[field(value)]
   |             ^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:33:10
   |
33 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: variant has conflicting values
  --> tests/ui-fail-stable/from_form_field.rs:41:5
   |
41 | /     #[field(value = "bar")]
42 | |     #[field(value = "bar")]
43 | |     A,
   | |_____^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mthis value...␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:41:21
   |
41 |     #[field(value = "bar")]
   |                     ^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39m...conflicts with this value␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:42:21
   |
42 |     #[field(value = "bar")]
   |                     ^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:39:10
   |
39 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field value conflicts with previous value
  --> tests/ui-fail-stable/from_form_field.rs:50:21
   |
50 |     #[field(value = "BAr")]
   |                     ^^^^^

error: ␛[1;34m[␛[0m␛[1;36mhelp␛[0m␛[1;34m] ␛[0m␛[1;39m...declared in this variant␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:50:5
   |
50 | /     #[field(value = "BAr")]
51 | |     B,
   | |_____^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mprevious field with conflicting name␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:48:5
   |
48 | /     #[field(value = "bar")]
49 | |     A,
   | |_____^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:46:10
   |
46 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field value conflicts with previous value
  --> tests/ui-fail-stable/from_form_field.rs:57:21
   |
57 |     #[field(value = "a")]
   |                     ^^^

error: ␛[1;34m[␛[0m␛[1;36mhelp␛[0m␛[1;34m] ␛[0m␛[1;39m...declared in this variant␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:57:5
   |
57 | /     #[field(value = "a")]
58 | |     B,
   | |_____^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mprevious field with conflicting name␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:56:5
   |
56 |     A,
   |     ^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:54:10
   |
54 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: variant has conflicting values
  --> tests/ui-fail-stable/from_form_field.rs:80:5
   |
80 | /     #[field(value = "FoO")]
81 | |     #[field(value = "foo")]
82 | |     A,
   | |_____^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mthis value...␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:80:21
   |
80 |     #[field(value = "FoO")]
   |                     ^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39m...conflicts with this value␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:81:21
   |
81 |     #[field(value = "foo")]
   |                     ^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromFormField`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:78:10
   |
78 | #[derive(FromFormField)]
   |          ^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `FromFormField` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field has conflicting names
  --> tests/ui-fail-stable/from_form_field.rs:87:5
   |
87 | /     #[field(name = "foo")]
88 | |     #[field(name = uncased("FOO"))]
89 | |     single: usize,
   | |_________________^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mthis field name...␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:87:20
   |
87 |     #[field(name = "foo")]
   |                    ^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39m...conflicts with this field name␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:88:28
   |
88 |     #[field(name = uncased("FOO"))]
   |                            ^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromForm`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:85:10
   |
85 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field name conflicts with previous name
  --> tests/ui-fail-stable/from_form_field.rs:96:20
   |
96 |     #[field(name = "foo")]
   |                    ^^^^^

error: ␛[1;34m[␛[0m␛[1;36mhelp␛[0m␛[1;34m] ␛[0m␛[1;39mdeclared in this field␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:96:5
   |
96 | /     #[field(name = "foo")]
97 | |     other: usize,
   | |________________^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mprevious field with conflicting name␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:94:5
   |
94 | /     #[field(name = "foo")]
95 | |     single: usize,
   | |_________________^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromForm`␛[0m
  --> tests/ui-fail-stable/from_form_field.rs:92:10
   |
92 | #[derive(FromForm)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field name conflicts with previous name
   --> tests/ui-fail-stable/from_form_field.rs:104:5
    |
104 |     hello_there: usize,
    |     ^^^^^^^^^^^

error: ␛[1;34m[␛[0m␛[1;36mhelp␛[0m␛[1;34m] ␛[0m␛[1;39mdeclared in this field␛[0m
   --> tests/ui-fail-stable/from_form_field.rs:104:5
    |
104 |     hello_there: usize,
    |     ^^^^^^^^^^^^^^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mprevious field with conflicting name␛[0m
   --> tests/ui-fail-stable/from_form_field.rs:102:5
    |
102 | /     #[field(name = uncased("HELLO_THERE"))]
103 | |     single: usize,
    | |_________________^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromForm`␛[0m
   --> tests/ui-fail-stable/from_form_field.rs:100:10
    |
100 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field name conflicts with previous name
   --> tests/ui-fail-stable/from_form_field.rs:111:5
    |
111 |     hello_there: usize,
    |     ^^^^^^^^^^^

error: ␛[1;34m[␛[0m␛[1;36mhelp␛[0m␛[1;34m] ␛[0m␛[1;39mdeclared in this field␛[0m
   --> tests/ui-fail-stable/from_form_field.rs:111:5
    |
111 |     hello_there: usize,
    |     ^^^^^^^^^^^^^^^^^^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39mprevious field with conflicting name␛[0m
   --> tests/ui-fail-stable/from_form_field.rs:109:5
    |
109 | /     #[field(name = "hello_there")]
110 | |     single: usize,
    | |_________________^

error: ␛[1;34m[␛[0m␛[1;32mnote␛[0m␛[1;34m] ␛[0m␛[1;39merror occurred while deriving `FromForm`␛[0m
   --> tests/ui-fail-stable/from_form_field.rs:107:10
    |
107 | #[derive(FromForm)]
    |          ^^^^^^^^
    |
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)
